socket communication issue resolved

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,12 +1,13 @@
-	
-CC := $(CROSS-COMPILE)gcc
-CFLAGS := -g -Wall -Werror
+CC ?= $(CROSS_COMPILE)gcc
+CFLAGS ?= -g -Wall -Werror
+INCLUDES = -I/
 SRC := client.c
 TARGET := client
 LDFLAGS := -pthread -lrt
 
-all: $(TARGET)
-	 $(CROSS_COMPILE)$(CC) $(CFLAGS) ${SRC} -o ${TARGET} ${LDFLAGS}
+all: $(TARGET) 
+	$(CC) $(CFLAGS) ${SRC} -o ${TARGET} ${LDFLAGS}
 
 clean:
 	rm -f *.o $(TARGET) *.elf *.map
+
