--- a/server/Makefile
+++ b/server/Makefile
@@ -1,17 +1,11 @@
 CROSS_COMPILE=
-ifeq ($(CC),)
-	CC = $(CROSS_COMPILE)gcc
-endif
-ifeq ($(CFLAGS),)
-	CFLAGS = -g -Wall -Werror
-endif
-ifeq ($(LDFLAGS),)
-	LDFLAGS = -pthread -lrt -lgpiod
-endif
-all:server
+CC=gcc
+SRC=server.c
+LIBS=-lgpiod
+CFLAGS=
+
+all:
+	$(CROSS_COMPILE)$(CC) $(SRC) $(LIBS) $(CFLAGS) -o server
 
 clean:
-	rm -f *.o server *.elf *.map
-
-server: server.o
-	$(CC) $(CFLAGS) $^ -o $@ $(INCLUDES) $(LDFLAGS)
+	rm -f *.o server
